refactor: rename examples task to list-examples
- Rename 'examples' to 'list-examples' for verb-based naming consistency
- Update README.md references to use new task name
- Aligns with naming pattern of build-examples and run-examples

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -84,7 +84,7 @@ tasks:
       - go mod tidy
     silent: true
 
-  examples:
+  list-examples:
     desc: list example packages
     cmds:
       - |
