--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,6 @@ theme:
   features:
     - navigation.instant
     - navigation.tracking
-    - navigation.tabs
     - navigation.sections
     - navigation.expand
     - navigation.top
@@ -34,6 +33,8 @@ theme:
     - search.highlight
     - content.code.copy
     - content.code.annotate
+extra_css:
+  - stylesheets/extra.css
 
 markdown_extensions:
   - pymdownx.highlight:
@@ -53,10 +54,10 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - Chapters:
-    - Chapter 1: ch01.md
-    - Chapter 2: ch02.md
-    - Chapter 3: ch03.md
+  - ch01.md
+  - ch02.md
+  - ch03.md
+  - ch04.md
 
 plugins:
   - search
