Integrate Vale prose linter
- Add Vale configuration (.vale.ini) with Google and Microsoft style guides
- Configure custom vocabulary for Go programming terms
- Add VS Code integration (settings.json and extensions.json)
- Create GitHub Actions workflow for prose linting
- Add prose-lint task to Taskfile.yml and include in CI
- Update setup task to check for Vale installation and sync styles
- Update README.md with Vale installation instructions and usage

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -48,6 +48,14 @@ tasks:
         fi
         echo "✓ pip installed"
 
+        # Check Vale
+        if ! command -v vale &> /dev/null; then
+          echo "❌ Vale is not installed. Please install Vale first."
+          echo "   brew install vale"
+          exit 1
+        fi
+        echo "✓ Vale $(vale --version | head -1)"
+
         echo ""
         echo "Installing Python dependencies..."
         pip install -r requirements.txt
@@ -55,6 +63,10 @@ tasks:
         echo ""
         echo "Installing Go dependencies..."
         go mod tidy
+
+        echo ""
+        echo "Syncing Vale styles..."
+        vale sync
 
         echo ""
         echo "✅ Setup complete! Run 'task' to see available commands."
@@ -82,6 +94,12 @@ tasks:
     desc: go mod tidy
     cmds:
       - go mod tidy
+    silent: true
+
+  prose-lint:
+    desc: run Vale prose linter on documentation
+    cmds:
+      - vale docs/
     silent: true
 
   list-examples:
@@ -159,11 +177,12 @@ tasks:
       vars: [PKG]
 
   ci:
-    desc: fmt, vet, test, build-examples
+    desc: fmt, vet, test, prose-lint, build-examples
     cmds:
       - task: fmt
       - task: vet
       - task: test
+      - task: prose-lint
       - task: build-examples
 
   docs:
