--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -30,9 +30,10 @@ jobs:
 
       - name: Install Vale
         run: |
-          wget https://github.com/errata-ai/vale/releases/latest/download/vale_Linux_64-bit.tar.gz
-          sudo tar -xzf vale_Linux_64-bit.tar.gz -C /usr/local/bin vale
-          rm vale_Linux_64-bit.tar.gz
+          VALE_VERSION=$(curl -s https://api.github.com/repos/errata-ai/vale/releases/latest | grep '"tag_name"' | sed -E 's/.*"v([^"]+)".*/\1/')
+          wget https://github.com/errata-ai/vale/releases/download/v${VALE_VERSION}/vale_${VALE_VERSION}_Linux_64-bit.tar.gz
+          sudo tar -xzf vale_${VALE_VERSION}_Linux_64-bit.tar.gz -C /usr/local/bin vale
+          rm vale_${VALE_VERSION}_Linux_64-bit.tar.gz
 
       - name: Install dependencies
         run: |
